--- a/meiduo/meiduo/uwsgi.ini
+++ b/meiduo/meiduo/uwsgi.ini
@@ -1,10 +1,9 @@
 [uwsgi]
 #使用nginx连接时使用，Django程序所在服务器地址
-socket=192.168.68.56:8001
+socket=192.168.29.82:8001
 #直接做web服务器使用，Django程序所在服务器地址
-# http=192.168.199.133:8001
 #项目目录
-chdir=/Users/chao/Desktop/meiduo_sz22/meiduo
+chdir=/Users/nikusunoki/Desktop/python_try/meiduo/meiduo_sz22/meiduo
 #项目中wsgi.py文件的目录，相对于项目目录
 wsgi-file=meiduo/wsgi.py
 # 进程数
@@ -18,4 +17,4 @@ pidfile=uwsgi.pid
 # 日志文件，因为uwsgi可以脱离终端在后台运行，日志看不见。我们以前的runserver是依赖终端的
 daemonize=uwsgi.log
 # 指定依赖的虚拟环境
-virtualenv=/Users/chao/.virtualenvs/meiduo
+virtualenv=/Users/nikusunoki/.virtualenvs/meiduo
